# Cybersecurity-Assets-Tracker

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260416_0001_initial.py  20260417_0002_asset_fields.py  20260420_0003_ingestion_skipped_count.py  20260421_0004_new_asset_fields.py  20260424_0005_nessus_tables.py
backend/app/: main.py  seed.py
backend/app/assets/: constants.py  models.py  routes.py  schemas.py  service.py
backend/app/audit/: models.py  routes.py  service.py
backend/app/auth/: models.py  routes.py  schemas.py
backend/app/controls/: service.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/correlation/: service.py
backend/app/criticality/: scoring.py  service.py
backend/app/ingestion/: models.py  normalize.py  parser.py  routes.py  service.py
backend/app/nessus/: client.py  connector.py  models.py  routes.py  schemas.py
backend/app/overrides/: service.py
backend/app/reports/: routes.py  service.py
backend/scripts/: reset_data.py
docker/: api.Dockerfile  nginx.conf  web.Dockerfile  web.dev.Dockerfile  worker.Dockerfile
docs/: ARCHITECTURE.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: AssetDetail.tsx  Assets.tsx  Audit.tsx  Dashboard.tsx  Login.tsx  Nessus.tsx  Upload.tsx
frontend/src/types/: index.ts
