[project]
name = "asset-inventory"
version = "0.1.0"
description = "Cybersecurity Asset Inventory API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "psycopg[binary]==3.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.12",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "xlsxwriter==3.2.0",
    "rapidfuzz==3.10.0",
    "redis==5.1.0",
    "rq==1.16.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "email-validator==2.2.0",
]

[tool.ruff]
line-length = 100
